--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ Pillow
 # ```bash
 # git clone https://github.com/yourusername/CultureCouture-AI.git
 # cd CultureCouture-AI
+
+# pip install -r requirements.txt
+
+# ollama run llama3
